--- a/index.html
+++ b/index.html
@@ -36,37 +36,37 @@
       <h2 class="title-1">Projects</h2>
       <ul class="projects">
         <li class="project">
-          <a href="./project=page.html">
+          <a href="./project-page.html">
             <img src="./img/1.jpg" alt="Project img" class="project__img">
             <h3 class="project__title">Gaming streaming portal</h3>
           </a>
         </li>
         <li class="project">
-          <a href="./project=page.html">
+          <a href="./project-page.html">
             <img src="./img/2.jpg" alt="Project img" class="project__img">
             <h3 class="project__title">Video service</h3>
           </a>
         </li>
         <li class="project">
-          <a href="./project=page.html">
+          <a href="./project-page.html">
             <img src="./img/3.jpg" alt="Project img" class="project__img">
             <h3 class="project__title">Video portal</h3>
           </a>
         </li>
         <li class="project">
-          <a href="./project=page.html">
+          <a href="./project-page.html">
             <img src="./img/4.jpg" alt="Project img" class="project__img">
             <h3 class="project__title">Dating app</h3>
           </a>
         </li>
         <li class="project">
-          <a href="./project=page.html">
+          <a href="./project-page.html">
             <img src="./img/5.jpg" alt="Project img" class="project__img">
             <h3 class="project__title">Landing</h3>
           </a>
         </li>
         <li class="project">
-          <a href="./project=page.html">
+          <a href="./project-page.html">
             <img src="./img/6.jpg" alt="Project img" class="project__img">
             <h3 class="project__title">Gaming community</h3>
           </a>
