--- a/skills.html
+++ b/skills.html
@@ -11,6 +11,10 @@
     <div class="container">
       <div class="nav-row">
         <a href="/" class="logo"><strong>Freelancer</strong> portfolio</a>
+        <button class="dark-mode-btn">
+          <img src="./img/icons/sun.svg" alt="Light mode" class="dark-mode-btn__icon">
+          <img src="./img/icons/moon.svg" alt="Dark mode" class="dark-mode-btn__icon">
+        </button>
         <ul class="nav-list">
           <li class="nav-list__item"><a href="./index.html" class="nav-list__link">Projects</a></li>
           <li class="nav-list__item"><a href="./skills.html" class="nav-list__link nav-list__link--active">Skills</a></li>
@@ -52,5 +56,6 @@
       </div>
     </div>
   </footer>
+  <script src="./js/main.js"></script>
 </body>
 </html>
